--- a/Index.html
+++ b/Index.html
@@ -30,13 +30,17 @@
     </div>
 
     <div class="banner"><br>
-        <section>
-            <h2>Mantente al Dia</h2>
-            <p>
-                con el correo insitucional puedes estar informado sobre los eventos y acontecimientos del Alma Mater.
-                Somos Pumas, viva la Educacion.
+        <section class = "banner-wrap">
+            <p class = "links">
+                <img src="img/Plataforma-virtual.png" alt="Logo Plataforma">
+                        <h2 class = "content-plataforma">Mantente al Dia</h2>
+                        <p class ="links2">
+                                sobre los eventos y acontecimientos del Alma Mater.
+                                el correo insitucional puedes estar informado 
+                                Somos Pumas, viva la Educacion
+                        </p>.
             </p>
-            <a href = "">Crea Tu Cuenta Ahora</a>
+            <a href = "#">Crea Tu Cuenta Ahora</a>
         </section>
         <section>
             <img src="" alt="Imagen-rector">
