--- a/Index.html
+++ b/Index.html
@@ -37,13 +37,13 @@
                         <p class ="links2">
                                 sobre los eventos y acontecimientos del Alma Mater.
                                 el correo insitucional puedes estar informado 
-                                Somos Pumas, viva la Educacion
-                        </p>.
+                                Somos Pumas, viva la Educacion.
+                        </p>
             </p>
             <a href = "#">Crea Tu Cuenta Ahora</a>
         </section>
         <section>
-            <img src="" alt="Imagen-rector">
+            <img src="img/rector-unah.jpg" alt="Imagen-rector" class = "rector">
         </section>        
     </div>
     <div class = "slider-show2-seccion-noticias">
