--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet" >
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/font-awesome.css">
+    <script src="js/jquery-3.1.0.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
     <header class = "navegacion1"> 
@@ -43,21 +45,20 @@
             <a href = "#">Crea Tu Cuenta Ahora</a>
         </section>
         <section>
-            <img src="img/rector-unah.jpg" alt="Imagen-rector" class = "rector">
+            <img src="img/UNAH14.jpg" alt="Imagen-rector" class = "rector">
         </section>        
     </div>
-    <div class = "slider-show2-seccion-noticias">
+    <div class = "slideshow">
         <ul class="slider">
             <section>
                 <h2>
                     Articulos Del Blog
                 </h2>
             </section>
-            <li><img src="" alt="Noticia-1"></li>
-            <li><img src="" alt="Noticia-2"></li>
-            <li><img src="" alt="Noticia-3"></li>
-            <li><img src="" alt="Noticia-4"></li>
-            <li><img src="" alt="Noticia-5"></li>
+            <li><img src="img/BANNER-WEB-1.jpg" alt="Noticia-1"></li>
+            <li><img src="img/BANNER-WEB-2.jpg" alt="Noticia-2"></li>
+            <li><img src="img/BANNER-WEB-3.jpg" alt="Noticia-3"></li>
+            <li><img src="img/BANNER-WEB-4.jpg" alt="Noticia-4"></li>
         </ul>
         <ol class = "paginacion">
             <li><span  class = "fa fa-circle"></span></li>
@@ -66,10 +67,10 @@
             <li><span  class = "fa fa-circle"></span></li>
             <li><span  class = "fa fa-circle"></span></li>   
         </ol>
-        <div class="left">
+        <div class="left1">
             <span class="fa fa-chevron-left"></span>
         </div>
-        <div class="right">
+        <div class="right1">
                 <span class="fa fa-chevron-right"></span>
         </div>
     </div>
