--- a/Index.html
+++ b/Index.html
@@ -50,22 +50,17 @@
     </div>
     <div class = "slideshow">
         <ul class="slider">
-            <section>
-                <h2>
+                <section>
+                    <h2>
                     Articulos Del Blog
-                </h2>
-            </section>
-            <li><img src="img/BANNER-WEB-1.jpg" alt="Noticia-1"></li>
-            <li><img src="img/BANNER-WEB-2.jpg" alt="Noticia-2"></li>
-            <li><img src="img/BANNER-WEB-3.jpg" alt="Noticia-3"></li>
-            <li><img src="img/BANNER-WEB-4.jpg" alt="Noticia-4"></li>
+                    </h2>
+                </section>
+            <li><img src="img/BANNER1.jpg" alt="Noticia-1"></li>
+            <li><img src="img/BANNER2.jpg" alt="Noticia-2"></li>
+            <li><img src="img/BANNER3.jpg" alt="Noticia-3"></li>
+            <li><img src="img/BANNER4.jpg" alt="Noticia-4"></li>
         </ul>
         <ol class = "paginacion">
-            <li><span  class = "fa fa-circle"></span></li>
-            <li><span  class = "fa fa-circle"></span></li>
-            <li><span  class = "fa fa-circle"></span></li>
-            <li><span  class = "fa fa-circle"></span></li>
-            <li><span  class = "fa fa-circle"></span></li>   
         </ol>
         <div class="left1">
             <span class="fa fa-chevron-left"></span>
