--- a/Index.html
+++ b/Index.html
@@ -51,14 +51,14 @@
     <div class = "slideshow">
         <ul class="slider">
                 <section>
-                    <h2>
-                    Articulos Del Blog
+                    <h2 class = "Articulos_blog">
+                        Articulos Del Blog
                     </h2>
                 </section>
-            <li><img src="img/BANNER1.jpg" alt="Noticia-1"></li>
-            <li><img src="img/BANNER2.jpg" alt="Noticia-2"></li>
-            <li><img src="img/BANNER3.jpg" alt="Noticia-3"></li>
-            <li><img src="img/BANNER4.jpg" alt="Noticia-4"></li>
+            <li><img src="img/BANNER1.jpg" ></li>
+            <li><img src="img/BANNER2.jpg" ></li>
+            <li><img src="img/BANNER3.jpg" ></li>
+            <li><img src="img/BANNER4.jpg" ></li>
         </ul>
         <ol class = "paginacion">
         </ol>
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class = "slider-enlaces">
-            <ul class="slider-enlaces">
+            <ul class="slider-enlaces2">
                 <section>
                     <h2>
                         Enlaces
@@ -87,10 +87,10 @@
                 <li><img src="" alt="Enlace-9"></li>
                 <li><img src="" alt="Enlace-10"></li>
             </ul>
-            <div class="left">
+            <div class="left_2">
                 <span class="fa fa-chevron-left"></span>
             </div>
-            <div class="right">
+            <div class="right_2">
                     <span class="fa fa-chevron-right"></span>
             </div>
         </div>
