--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
                                 Somos Pumas, viva la Educacion.
                         </p>
             </p>
-            <a href = "#">Crea Tu Cuenta Ahora</a>
+            <a href = "#">Accede a Tu Cuenta Ahora</a>
         </section>
         <section>
             <img src="img/UNAH14.jpg" alt="Imagen-rector" class = "rector">
