Actualizacion de Proyecto

--- a/Formularios-Sign-in-Alumnos/Sign-in.html
+++ b/Formularios-Sign-in-Alumnos/Sign-in.html
@@ -19,7 +19,7 @@
   <body class="text-center" style="background-image: url(img/libros.png);">
 
         <form class="form-signin">
-            <img class="mb-4" src="img/poli.jpg" alt="" width="72" height="72">
+            <img class="mb-4 rounded-circle" src="img/poli.jpg" alt="" width="85" height="85">
             <h1 class="h3 mb-3 font-weight-normal">Estudiantes</h1>
             <p class = "parrafo1">
               Ingresa tu número de cuenta y clave
