--- a/Formularios-Sign-in-Jefes-Departamento/Sign-in.html
+++ b/Formularios-Sign-in-Jefes-Departamento/Sign-in.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.ico">
 
-    <title>Inicio Seccion Catedraticos</title>
+    <title>Inicio Seccion Jefes De Departamento</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -16,11 +16,11 @@
     <link href="css/signin.css" rel="stylesheet">
   </head>
 
-  <body class="text-center" style="background-image: url(img/fondo.jpg);">
+  <body class="text-center" style="background-image: url(img/wap.jpeg);">
 
         <form class="form-signin">
-            <img class="mb-4 rounded-circle" src="img/maestros.png" alt="" width="85" height="85">
-            <h1 class="h3 mb-3 font-weight-normal">Catedraticos</h1>
+            <img class="mb-4 rounded-circle" src="img/Jefe.jpg" alt="" width="100" height="85">
+            <h1 class="h3 mb-3 font-weight-normal">Jefe De Departamento</h1>
             <p class = "parrafo1">
               Ingresa tu número de cuenta y clave
             </p>
