Actualizacion Responsive Pag Principal

--- a/Pag Principal/Index.html
+++ b/Pag Principal/Index.html
@@ -4,110 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inicio -Universidad Nacional Autonoma De Honduras</title>
+    <title>Inicio-Universidad Nacional Autonoma De Honduras</title>
+    <link rel="icon" href="img/logo.ico">
+
     <link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet" >
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <script src="js/jquery-3.1.0.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
-    <header class = "navegacion1"> 
-        <img src="img/logo-unah.png" alt="Logo UNAH" height="100px" class = "logo">
-        <section class ="logotip">
-                <h1>
-                    Direccion De Ingreso Permanencia y Promocion
-                </h1>
-        </section>          
+    <header>
+        <div class ="logotipo">
+            <section>
+                    <img src="img/logo-unah.png" alt="" class ="izq">
+                    <h1 class = "der">Direccion De Ingreso Permanecia y Promocion</h1>
+                    <h2 class = "der">DIPP - UNAH</h2>
+            </section>
+        </div>
+        <div class="navegacion">
+            <div class = "boton-menu">
+                <a href="#"><span class = "icon icon-align-left"></span></a>
+            </div>
+            <nav>
+                <ul class = "menu">
+                    <li><a href="#">Pagina Principal</a></li>
+                    <li><a href="#">Primer Ingreso</a></li>
+                    <li><a href="#">Pagina Principal</a></li>
+                    <li><a href="#">Sistema Pregrado</a></li>
+                    <li><a href="#">Centros de Estudio</a></li>
+                </ul>
+            </nav>
+        </div>  
     </header>
-    <div class = "wrap2">
-            <h2 class = "subtitulo">DIPP-UNAH</h2>
-        <nav class = "menu">
-                <a href = "#" >Pagina Principal</a>
-                <a href = "#" >Primer Ingreso</a>
-                <a href = "#" >Sistema De PostGrado</a>
-                <a href = "#" >Facultades</a>
-                <a href = "#" >Centros De Estudio</a> 
-        </nav>
-    </div>
 
-    <div class="banner"><br>
-        <section class = "banner-wrap">
-            <p class = "links">
-                <img src="img/Plataforma-virtual.png" alt="Logo Plataforma">
-                        <h2 class = "content-plataforma">Mantente al Dia</h2>
-                        <p class ="links2">
-                                sobre los eventos y acontecimientos del Alma Mater.
-                                el correo insitucional puedes estar informado 
-                                Somos Pumas, viva la Educacion.
-                        </p>
-            </p>
-            <a href = "#">Accede a Tu Cuenta Ahora</a>
-        </section>
-        <section>
-            <img src="img/UNAH14.jpg" alt="Imagen-rector" class = "rector">
-        </section>        
-    </div>
-    <div class = "slideshow">
-        <ul class="slider">
-                <section>
-                    <h2 class = "Articulos_blog">
-                        Articulos Del Blog
-                    </h2>
-                </section>
-            <li><img src="img/BANNER1.jpg" ></li>
-            <li><img src="img/BANNER2.jpg" ></li>
-            <li><img src="img/BANNER3.jpg" ></li>
-            <li><img src="img/BANNER4.jpg" ></li>
-        </ul>
-        <ol class = "paginacion">
-        </ol>
-        <div class="left1">
-            <span class="fa fa-chevron-left"></span>
-        </div>
-        <div class="right1">
-                <span class="fa fa-chevron-right"></span>
-        </div>
-    </div>
-    <div class = "slider-enlaces">
-            <ul class="slider-enlaces2">
-                <section>
-                    <h2>
-                        Enlaces
-                    </h2>
-                </section>
-                <li><img src="" alt="Enlace-1"></li>
-                <li><img src="" alt="Enlace-2"></li>
-                <li><img src="" alt="Enlace-3"></li>
-                <li><img src="" alt="Enlace-4"></li>
-                <li><img src="" alt="Enlace-5"></li>
-                <li><img src="" alt="Enlace-6"></li>
-                <li><img src="" alt="Enlace-7"></li>
-                <li><img src="" alt="Enlace-8"></li>
-                <li><img src="" alt="Enlace-9"></li>
-                <li><img src="" alt="Enlace-10"></li>
-            </ul>
-            <div class="left_2">
-                <span class="fa fa-chevron-left"></span>
-            </div>
-            <div class="right_2">
-                    <span class="fa fa-chevron-right"></span>
-            </div>
-        </div>
-        <footer>
-            <div class="wrap">
-                <p>Universidad Nacional Autonoma De Honduras</p>
-                <section>
-                </section>
-                <a href = "https://www.facebook.com/">Facebook</a>
-                <div class = "logounah"><img src="img/footer.png" alt="Pie de pagina" class = "pie"></div>
-                <p class = "parrafo-pie">
-                        <img src="img/pie.png" class = "logopie">
-                        Derechos reservados Universidad Nacional Autónoma de Honduras 2018
-                        Desarrollado por la Clase De Programacion Orientada A Objetos Alumnos 
-                        de Ingenieria En Sistemas
-                    </p>
-                </div>
-        </footer>    
+   
 </body>
 </html>
