--- a/Pag Principal/Index.html
+++ b/Pag Principal/Index.html
@@ -40,6 +40,19 @@
         </div>  
     </header>
 
-   
+
+    <footer>
+            <div class="wrap">
+                <p>Universidad Nacional Autonoma De Honduras</p>
+                <a href = "https://www.facebook.com/">Facebook</a>
+                <div class = "logounah"><img src="img/footer.png" alt="Pie de pagina" class = "pie"></div>
+                    <p class = "parrafo-pie">
+                        <img src="img/pie.png" class = "logopie">
+                        Derechos reservados Universidad Nacional Autónoma de Honduras 2018
+                        Desarrollado por la Clase De Programacion Orientada A Objetos Alumnos 
+                        de Ingenieria En Sistemas
+                    </p>
+            </div>
+        </footer>
 </body>
 </html>
