--- a/Pag Principal/Index.html
+++ b/Pag Principal/Index.html
@@ -21,7 +21,7 @@
             <section>
                     <img src="img/logo-unah.png" alt="" class ="izq">
                     <h1 class = "der">Direccion De Ingreso Permanecia y Promocion</h1>
-                    <h2 class = "der">DIPP - UNAH</h2>
+                    <h2 class = "der">DIPP-UNAH</h2>
             </section>
         </div>
         <div class="navegacion">
@@ -39,20 +39,26 @@
             </nav>
         </div>  
     </header>
-
-
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et ipsam nisi reprehenderit, quas libero nulla rem cupiditate natus exercitationem beatae laborum quisquam alias voluptate corporis saepe similique doloremque explicabo a omnis amet officia tenetur doloribus rerum. Facilis, rem blanditiis praesentium, et aut ipsa sequi laborum quisquam temporibus ab, optio officiis corrupti perferendis nobis eos expedita vitae repudiandae? Sequi minus accusantium impedit necessitatibus. Sunt accusantium amet est reprehenderit ex labore voluptatibus similique. Ipsum distinctio eius ducimus, unde velit explicabo totam laboriosam quos, deserunt cum aliquid sit adipisci natus. Architecto modi voluptate nobis, quis repellat quasi optio dolorum culpa fugiat doloremque qui nulla aspernatur animi rerum ullam corrupti excepturi, provident illo vel aliquid cumque error ex. Corporis unde dignissimos sit quisquam ut voluptatibus consequuntur expedita iste velit illo culpa, magni labore rerum consectetur nesciunt, error accusantium nihil! Deserunt quaerat reprehenderit ex ea ab pariatur saepe! Error est odit dolore earum. Aperiam, magnam, atque deleniti reprehenderit eaque sit repudiandae quaerat repellat cupiditate earum veniam dolores ratione quisquam et harum? Nisi explicabo perspiciatis veniam cum, mollitia aliquid dolorem, dignissimos nemo consequuntur, reiciendis eaque voluptatem eligendi soluta repellat ea. Vero optio, dignissimos possimus voluptatibus harum aliquam adipisci, delectus voluptate itaque velit commodi ex ipsum sapiente tempore omnis cupiditate, quod neque. Quis cum exercitationem eos deleniti omnis saepe deserunt perspiciatis veritatis ab iure odio, dicta provident placeat? Doloribus reprehenderit consequuntur perferendis quia commodi dolorem, velit nulla quod, nemo repudiandae, a ullam sed fugiat quibusdam ab deleniti assumenda voluptatibus minima. Dolorem velit ratione sint similique alias perferendis ullam, nesciunt hic, autem sit voluptate earum odio tempore dignissimos. Recusandae in maiores fugiat adipisci nulla at accusantium molestias odit vel, maxime dignissimos similique explicabo ipsum exercitationem sapiente reiciendis deleniti officiis quod voluptatum vitae autem magnam optio. Doloribus maxime dolor eos cupiditate in unde repudiandae, incidunt a possimus laudantium? Quas, nesciunt soluta debitis rerum placeat delectus deserunt error ratione id reprehenderit explicabo modi recusandae, a repellat ex est, sunt fuga non eaque repellendus obcaecati tenetur? Doloremque, voluptas cupiditate maiores sequi molestiae temporibus ad maxime natus nihil dolorem repellat minus cum atque asperiores blanditiis voluptatum laborum debitis animi? Libero nisi, atque quisquam molestias fugiat deserunt, nihil dignissimos in ea voluptatum sequi! Asperiores, numquam. Excepturi harum sapiente a in, accusamus perspiciatis maxime incidunt nulla quo necessitatibus vero, veritatis saepe architecto soluta ipsam odit debitis quae! A suscipit reiciendis error. Quam velit autem molestiae voluptatem nihil nam laboriosam culpa rerum vitae est, ipsa explicabo voluptatum consequuntur iure neque ipsum odit provident sint et veniam consequatur. Ea impedit neque eum qui! Maxime et libero assumenda, in similique expedita ipsam itaque odit, impedit sequi neque cum necessitatibus laudantium laboriosam qui ad atque cupiditate sapiente, accusamus soluta saepe id voluptatibus ipsa dolorem. Numquam perspiciatis quia possimus eius sed similique corporis vitae reiciendis repellat, sequi dignissimos qui dolorum aliquam! Ducimus impedit obcaecati animi cum blanditiis. Animi, obcaecati. Distinctio ipsam maxime praesentium quas nulla quisquam perferendis dignissimos sunt provident! Quod itaque totam optio molestiae tempore! Laudantium quidem iusto optio delectus numquam, ab sequi praesentium esse officia doloremque!</p>
     <footer>
-            <div class="wrap">
-                <p>Universidad Nacional Autonoma De Honduras</p>
-                <a href = "https://www.facebook.com/">Facebook</a>
-                <div class = "logounah"><img src="img/footer.png" alt="Pie de pagina" class = "pie"></div>
-                    <p class = "parrafo-pie">
-                        <img src="img/pie.png" class = "logopie">
-                        Derechos reservados Universidad Nacional Autónoma de Honduras 2018
-                        Desarrollado por la Clase De Programacion Orientada A Objetos Alumnos 
-                        de Ingenieria En Sistemas
-                    </p>
-            </div>
-        </footer>
+        <div class="wrap">
+            <p>Universidad Nacional Autonoma De Honduras</p>
+            <a href = "https://www.facebook.com/">Facebook</a>
+            <div class = "logounah"><img src="img/footer.png" alt="Pie de pagina" class = "pie"></div>
+                <p class = "parrafo-pie">
+                    <img src="img/pie.png" class = "logopie">
+                    Derechos reservados Universidad Nacional Autónoma de Honduras 2018
+                    Desarrollado por la Clase De Programacion Orientada A Objetos Alumnos 
+                    de Ingenieria En Sistemas
+                </p>
+        </div>
+    </footer>
+
+
 </body>
 </html>
