--- a/Pag Principal/Index.html
+++ b/Pag Principal/Index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src = "js/jquery.flexslider.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -39,6 +40,24 @@
             </nav>
         </div>  
     </header>
+    <!--Creando El Slider con Flex Slider-->
+    <div class="flexslider">
+        <ul class="slides">
+            <li>
+                <img src="img/BANNER1.jpg" alt="">
+            </li>
+            <li>
+                <img src="img/BANNER2.jpg" alt="">
+            </li>
+            <li>
+                <img src="img/BANNER3.jpg" alt="">
+            </li>
+            <li>
+                <img src="img/BANNER4.jpg" alt="">
+            </li>
+        </ul>
+    </div>
+
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quibusdam laborum doloremque, omnis quod, quae, soluta quas illo nam fuga veniam hic incidunt? Sapiente ea maiores ullam. Ea autem eaque ex illo odit voluptatem laudantium sed harum corporis libero modi vero cum, repellat consectetur quisquam rem deserunt iure deleniti atque ut veritatis sit placeat. Dolor totam impedit itaque eligendi sit doloribus dolores veritatis. Ipsa excepturi vel totam! Est reiciendis explicabo, dolor doloribus totam asperiores, doloremque nam soluta provident corrupti alias eos animi, qui atque excepturi nihil praesentium exercitationem ullam. Laudantium soluta vitae esse fugit ad, odio nobis non quisquam sunt?</p>
