--- a/Pag Principal/Index.html
+++ b/Pag Principal/Index.html
@@ -17,7 +17,7 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <header>
+    <header class="hs-masthead">
         <div class ="logotipo">
             <section>
                     <img src="img/logo-unah.png" alt="" class ="izq">
