actualizacion Pag Facultades

--- a/Pag-Principal/Index.html
+++ b/Pag-Principal/Index.html
@@ -33,7 +33,7 @@
                 <ul class = "menu">
                     <li><a href="#">Pagina Principal</a></li>
                     <li><a href="#">Primer Ingreso</a></li>
-                    <li><a href="#">Pagina Principal</a></li>
+                    <li><a href="#">Facultades</a></li>
                     <li><a href="#">Sistema Pregrado</a></li>
                     <li><a href="#">Centros de Estudio</a></li>
                 </ul>
