--- a/Formulario-Facultades/Facult-page.html
+++ b/Formulario-Facultades/Facult-page.html
@@ -10,17 +10,17 @@
     <link rel="icon"  href="img/logo.ico" />
 
 </head>
-<body style = "background: blue; font-family: 'K2D', sans-serif;"><!--url(img/wap.jpeg)-->
+<body style = "background: url(img/wap.jpeg); font-family: 'K2D', sans-serif;"><!---->
     <header>
         <div class="container-fluid encabezado">
-            <h1>Observa Nuestras Facultades</h1>
+            <h1>Observa Nuestras Facultades:</h1>
             <a href="../Pag-Principal/index.html" style="text-decoration: none;">Pag Principal</a>
         </div>
     </header>
     <div class="container portafolio">
         <div class = "row">
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/ciencias.png" alt="">
+                <img src="img/ciencias.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias</h2>
                     <p>
@@ -30,7 +30,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/ciencias_espaciales.png" alt="">
+                <img src="img/ciencias_espaciales.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Espaciales</h2>
                     <p>
@@ -40,7 +40,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/ciencias_sociales.png" alt="">
+                <img src="img/ciencias_sociales.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Sociales</h2>
                     <p>
@@ -50,7 +50,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/economicas.png" alt="">
+                <img src="img/economicas.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Economia</h2>
                     <p>
@@ -60,7 +60,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/Facultad_de_Ciencias_Medican_UNAH.png" alt="">
+                <img src="img/Facultad_de_Ciencias_Medican_UNAH.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Medicas</h2>
                     <p>
@@ -70,7 +70,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/humanidades.png" alt="">
+                <img src="img/humanidades.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Humanidades</h2>
                     <p>
@@ -80,7 +80,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/ingenieria.png" alt="">
+                <img src="img/ingenieria.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ingenieria</h2>
                     <p>
@@ -90,7 +90,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/juridicas.png" alt="">
+                <img src="img/juridicas.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Juridicas</h2>
                     <p>
@@ -100,7 +100,7 @@
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/odonto.png" alt="">
+                <img src="img/odontologia.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Odontologia</h2>
                     <p>
@@ -109,9 +109,9 @@
                     </p>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
-                <img src="img/quimica.png" alt="">
-                <section class = "portafolio-texto">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 ">
+                <img src="img/quimicas.png" alt="" class = "portafolio-img">
+                <section class = "portafolio-texto" >
                     <h2>Facultad de Quimica Y Farmancia</h2>
                     <p>
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
@@ -124,8 +124,10 @@
     
 
 
-    <footer>
-        <h2>AQUI PARA EL FOOTER</h2>
+    <footer class = "container-fluid" style="background:#003399;">
+        <div class = "row">
+                <h2>Visitanos</h2>
+        </div>  
     </footer>
 </body>
 </html>
