--- a/Formulario-Facultades/Facult-page.html
+++ b/Formulario-Facultades/Facult-page.html
@@ -27,6 +27,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -37,6 +38,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -47,6 +49,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -57,6 +60,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -67,6 +71,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -77,6 +82,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -87,6 +93,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -97,6 +104,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
@@ -106,7 +114,9 @@
                     <p>
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
+                        
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 ">
@@ -117,6 +127,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
+                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
         </div>
