--- a/Formulario-Facultades/Facult-page.html
+++ b/Formulario-Facultades/Facult-page.html
@@ -11,9 +11,9 @@
 
 </head>
 <body style = "background: url(img/wap.jpeg); font-family: 'K2D', sans-serif;"><!---->
-    <header>
+    <header class = "row">
         <div class="container-fluid encabezado">
-            <h1>Observa Nuestras Facultades:</h1>
+            <h1>Facultades:</h1>
             <a href="../Pag-Principal/index.html" style="text-decoration: none;">Pag Principal</a>
         </div>
     </header>
