Pagina de Ciencias Medicas

--- a/Formulario-Facultades/Ciencia.html
+++ b/Formulario-Facultades/Ciencia.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.ico">
 
-    <title>Facultad de Ingenieria UNAH</title>
+    <title>Facultad de Ciencias UNAH</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <body style="font-family: 'K2D', sans-serif;">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ingenieria</a>
+      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ciencias</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,7 +43,7 @@
                 <img class ="center" src="img/ingenieria-mecanica.jpg" alt="" style="width:250px; margin-top: 10px; margin-left: auto;
                     margin-right: auto; display: block;">
                 
-                <h3 style="color:white;"><strong>Definicion de Ingenieria</strong></h3>
+                <h3 style="color:white;"><strong>Definicion de Ciencia</strong></h3>
                 <p style="color:white; font-size:15px;">
                     Se denomina con el nombre de ingeniería a aquella disciplina que se ocupa del estudio y de la aplicación de los conocimientos que de este y de la experiencia resultan, para que a través de diseños, técnicas y problemas puedan ser resueltos los diferentes problemas que afectan a la humanidad.
                     ingeniería ostenta, la principal función de un ingeniero será la de promover y desarrollar soluciones tecnológicas para aquellas necesidades sociales, industriales y económicas que vayan suscitándose en la vida.
@@ -75,26 +75,6 @@
               <h2>Ingenieria Industrial</h2>
               <img src="img/industrial.jpg" alt="" style="width:230px; height:180px;">
               <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Industrial.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Ingenieria Mecanica</h2>
-              <img src="img/mecanica.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Mecanica-Industrial.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Ingenieria Quimica</h2>
-              <img src="img/quimica.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/PlanDeEstudiosIngenieriaQuimicaIndustrial.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Ingenieria Forestal</h2>
-              <img src="img/forestal.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Forestal.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>ingenieria Agronomica</h2>
-              <img src="img/agronomica.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Agronomica.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
             </div>
         </div>
 
